# TerminalVideo

./: .gitignore  CMakeLists.txt  README.md  build.sh  main.cpp  notif.cpp
